--- a/app/src/main/res/layout/activity_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_tracking_screen.xml
@@ -25,6 +25,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
         android:clickable="true"
+        android:contentDescription="@string/GoBack"
         android:onClick="goBack"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
