--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="darkBlue">#2A4494</color>
     <color name="lightBlue">#5899E2</color>
     <color name="seaGreen">#58bc82</color>
+    <color name="grey">#30332e</color>
+    <color name="lightGrey">#a1a9a8</color>
+    <color name="red">#ff0000</color>
 </resources>
