--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -51,4 +51,31 @@
         android:text="Track"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/xpBar"
+        android:layout_width="117dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="104dp"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/purple_500"
+        android:text="0 / 0 | Level: 1"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="0 / 0" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="144dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="248dp"
+        android:onClick="goToCollectionScreen"
+        android:text="Collection"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
