--- a/app/src/main/res/layout/activity_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_tracking_screen.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="goBack"
-    tools:context=".trackingScreen"
-    android:background="@color/white">
+    tools:context=".Screens.trackingScreen">
 
     <TextView
         android:id="@+id/textView"
@@ -26,7 +25,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
         android:clickable="true"
-        android:contentDescription="@string/GoBack"
         android:onClick="goBack"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
