--- a/app/src/main/res/layout/activity_cardio_display_screen.xml
+++ b/app/src/main/res/layout/activity_cardio_display_screen.xml
@@ -63,6 +63,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="1dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
