--- a/app/src/main/res/layout/activity_collection_disc_rack.xml
+++ b/app/src/main/res/layout/activity_collection_disc_rack.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -54,7 +54,7 @@
         app:srcCompat="@drawable/previous_icon" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvException"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
