--- a/app/src/main/res/layout/activity_collection_sticker_wall.xml
+++ b/app/src/main/res/layout/activity_collection_sticker_wall.xml
@@ -19,6 +19,7 @@
         android:id="@+id/topvarSW"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/prompt"
         android:layout_marginTop="48dp"
         android:background="@color/purple_700"
         android:minHeight="?attr/actionBarSize"
@@ -33,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="126dp"
         android:onClick="goToDiscRackScreen"
+        android:fontFamily="@font/prompt"
         android:text="Disc Rack"
         app:layout_constraintBottom_toBottomOf="@+id/topvarSW"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Sticker Wall"
+        android:fontFamily="@font/prompt"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
