--- a/app/src/main/res/layout/addlogpopup.xml
+++ b/app/src/main/res/layout/addlogpopup.xml
@@ -9,105 +9,114 @@
         android:id="@+id/Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:layout_marginBottom="139dp"
+        android:layout_marginTop="14dp"
         android:ems="10"
+        android:fontFamily="@font/prompt"
+
         android:hint="Date"
         android:inputType="date"
         android:maxLength="10"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/Calories"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/Type" />
 
     <EditText
         android:id="@+id/Distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="14dp"
         android:ems="10"
+        android:fontFamily="@font/prompt"
         android:hint="Distance"
         android:inputType="number|numberDecimal"
         android:maxLength="5"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/Hours"
-        app:layout_constraintStart_toStartOf="@+id/Date" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Date" />
 
     <EditText
         android:id="@+id/Minutes"
         android:layout_width="114dp"
         android:layout_height="53dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
+        android:fontFamily="@font/prompt"
         android:hint="Minutes"
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/Calories"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/enter"
-        app:layout_constraintTop_toBottomOf="@+id/Date" />
+        app:layout_constraintHorizontal_bias="0.784"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Distance" />
 
     <EditText
         android:id="@+id/Hours"
         android:layout_width="114dp"
-        android:layout_height="0dp"
-        android:ems="10"
+        android:layout_height="53dp"
 
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:fontFamily="@font/prompt"
         android:hint="Hours"
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/Minutes"
-        app:layout_constraintStart_toStartOf="@+id/Distance"
-        app:layout_constraintTop_toTopOf="@+id/Minutes" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.215"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Distance" />
 
     <EditText
         android:id="@+id/Calories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
         android:ems="10"
+        android:fontFamily="@font/prompt"
         android:hint="Calories"
         android:inputType="number"
         android:maxLength="3"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/Hours"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Minutes" />
 
     <Button
         android:id="@+id/enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="29dp"
         android:background="@drawable/addlogpopupbuttons"
+        android:fontFamily="@font/prompt"
+        android:onClick="createNewLog"
         android:text="Save"
-        app:layout_constraintStart_toStartOf="@+id/Calories"
-        app:layout_constraintTop_toBottomOf="@+id/Calories"
-        android:onClick="createNewLog"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.216"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Calories" />
 
     <Button
         android:id="@+id/Cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="66dp"
+        android:layout_marginTop="29dp"
         android:background="@drawable/addlogpopupbuttons"
+        android:fontFamily="@font/prompt"
+        android:onClick="can"
         android:text="Cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Calories"
-        android:onClick="can"/>
+        app:layout_constraintHorizontal_bias="0.778"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Calories" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier8"
@@ -115,7 +124,7 @@
         android:layout_height="wrap_content"
         app:barrierDirection="top"
         app:constraint_referenced_ids="enter"
-        tools:layout_editor_absoluteY="410dp" />
+        tools:layout_editor_absoluteY="419dp" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier9"
@@ -123,32 +132,28 @@
         android:layout_height="wrap_content"
         app:barrierDirection="top"
         app:constraint_referenced_ids="Cancel"
-        tools:layout_editor_absoluteY="413dp" />
+        tools:layout_editor_absoluteY="422dp" />
 
     <TextView
         android:id="@+id/Error"
-        android:layout_width="0dp"
+        android:layout_width="283dp"
         android:layout_height="52dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginEnd="64dp"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/Type"
-        android:layout_width="0dp"
+        android:layout_width="175dp"
         android:layout_height="52dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="73dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginBottom="68dp"
-        app:layout_constraintBottom_toBottomOf="@+id/Date"
+        android:layout_marginTop="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/Error" />
+        app:layout_constraintTop_toBottomOf="@+id/Error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
