--- a/app/src/main/res/layout/loginpopup.xml
+++ b/app/src/main/res/layout/loginpopup.xml
@@ -17,6 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:fontFamily="@font/prompt"
         app:layout_constraintVertical_bias="0.786" />
 
     <EditText
@@ -26,6 +27,7 @@
         android:layout_marginBottom="19dp"
         android:backgroundTint="@color/lightGrey"
         android:ems="10"
+        android:fontFamily="@font/prompt"
         android:hint="Enter Password"
         android:inputType="textPassword"
         android:textAlignment="center"
@@ -46,6 +48,7 @@
         android:textColor="@color/red"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
+        android:fontFamily="@font/prompt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordText" />
@@ -57,6 +60,7 @@
         android:layout_marginTop="164dp"
         android:backgroundTint="@color/lightGrey"
         android:ems="10"
+        android:fontFamily="@font/prompt"
         android:hint="Enter Username"
         android:inputType="textPersonName"
         android:maxLength="12"
@@ -73,6 +77,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/prompt"
         android:text="Don't have an Account?"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
@@ -84,8 +89,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="36dp"
         android:layout_marginBottom="96dp"
+        android:fontFamily="@font/prompt"
         android:onClick="goToNewUserScreen"
         android:text="@string/Signup"
         android:textColor="@color/lightBlue"
