--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -9,8 +9,7 @@
 
         android:layout_width="0dp"
         android:layout_height="?android:attr/listPreferredItemHeight"
-        android:gravity="center"
-        android:textAlignment="viewStart"
+        android:fontFamily="@font/prompt"
         android:textColor="@color/lightBlue"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
