--- a/app/src/main/res/layout/activity_collection_sticker_wall.xml
+++ b/app/src/main/res/layout/activity_collection_sticker_wall.xml
@@ -3,12 +3,235 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:backgroundTint="@color/lightBlue"
+    android:foregroundTint="@color/lightBlue">
+
+    <ImageView
+        android:id="@+id/A44"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A43"
+        app:layout_constraintTop_toBottomOf="@+id/A34"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A34"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A33"
+        app:layout_constraintTop_toBottomOf="@+id/A24"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A24"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A23"
+        app:layout_constraintTop_toBottomOf="@+id/A14"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A02"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="128dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A01"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A03"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="128dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A02"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A14"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A13"
+        app:layout_constraintTop_toBottomOf="@+id/A04"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A11"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/A01"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A12"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A11"
+        app:layout_constraintTop_toBottomOf="@+id/A02"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A43"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A42"
+        app:layout_constraintTop_toBottomOf="@+id/A33"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A42"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A41"
+        app:layout_constraintTop_toBottomOf="@+id/A32"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A41"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/A31"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A23"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A22"
+        app:layout_constraintTop_toBottomOf="@+id/A13"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A22"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A21"
+        app:layout_constraintTop_toBottomOf="@+id/A12"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A21"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/A11"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A33"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A32"
+        app:layout_constraintTop_toBottomOf="@+id/A23"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A32"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A31"
+        app:layout_constraintTop_toBottomOf="@+id/A22"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A31"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/A21"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A13"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A12"
+        app:layout_constraintTop_toBottomOf="@+id/A03"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A04"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="128dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toEndOf="@+id/A03"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_star" />
+
+    <ImageView
+        android:id="@+id/A01"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="128dp"
+        android:onClick="showStickerDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_star" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/darkBlue"
         android:text="Sticker Wall"
         app:layout_constraintBottom_toBottomOf="@+id/topvarSW"
         app:layout_constraintEnd_toStartOf="@+id/button6"
@@ -19,9 +242,10 @@
         android:id="@+id/topvarSW"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/prompt"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="48dp"
-        android:background="@color/purple_700"
+        android:background="@color/lightBlue"
+        android:fontFamily="@font/prompt"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +257,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="126dp"
-        android:onClick="goToDiscRackScreen"
+        android:backgroundTint="@color/darkBlue"
         android:fontFamily="@font/prompt"
+        android:onClick="goToDiscRackScreen"
         android:text="Disc Rack"
         app:layout_constraintBottom_toBottomOf="@+id/topvarSW"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +268,7 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="50dp"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:clickable="true"
         android:contextClickable="false"
         android:onClick="goBack"
@@ -53,21 +278,21 @@
         app:layout_constraintStart_toEndOf="@+id/button6"
         app:layout_constraintTop_toTopOf="@+id/topvarSW"
         app:layout_constraintVertical_bias="0.714"
-        app:srcCompat="@drawable/previous_icon" />
+        app:srcCompat="@drawable/previous_icon"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Sticker Wall"
-        android:fontFamily="@font/prompt"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:id="@+id/DescriptionText1"
+        android:layout_width="356dp"
+        android:layout_height="77dp"
+        android:layout_marginBottom="48dp"
+        android:text="Description Here..."
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topvarSW" />
+        app:layout_constraintTop_toBottomOf="@+id/A42"
+        app:layout_constraintVertical_bias="0.859" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
