--- a/app/src/main/res/layout/activity_new_user_screen.xml
+++ b/app/src/main/res/layout/activity_new_user_screen.xml
@@ -99,16 +99,16 @@
     <TextView
         android:id="@+id/txtViewException"
         android:layout_width="206dp"
-        android:layout_height="56dp"
-        android:textAlignment="center"
-        android:layout_marginBottom="72dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
+        android:layout_height="90dp"
+        android:layout_marginBottom="56dp"
         android:backgroundTint="@color/lightGrey"
+        android:fontFamily="@font/prompt"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="#546E7A"
+        app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        android:fontFamily="@font/prompt"/>
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
