--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,8 +11,10 @@
         android:id="@+id/subMenu"
         android:layout_width="409dp"
         android:layout_height="674dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="56dp" >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </ListView>
 
